tests/snapshots/contracts/call_debug_types_arg.snap
---
source: tests/utils.rs
assertion_line: 76
info:
  program: kermit
  args:
    - "-n"
    - dev
    - "-c"
    - "./tests/contracts/test.config.yaml"
    - contracts
    - call
    - Sub
    - x73p5j2XfhbsMhPJqyWKe3RAoHCFEwswa8CjQbQ8o9kb
    - /tmp/call_debug_types_arg
    - sub
    - "--args"
    - "array=[2,1]"
---
"returns": [
    {
      "type": "U256",
      "value": "1"
    }
  ]
