tests/snapshots/contracts/call_debug_types_no_args.snap
---
source: tests/utils.rs
assertion_line: 45
info:
  program: kermit
  args:
    - contracts
    - "-n"
    - dev
    - "-c"
    - "./tests/contracts/test.config.yaml"
    - call
    - TestTypes
    - 27qpaiWmens9tV8q3sUNgq5d3JV8qXdBC8UW3C4UmrS9d
    - /tmp/call_debug_types_no_args
    - test
---
"type": "CallContractSucceeded"
}

----- stderr -----
