tests/snapshots/contracts/compile.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - "--url=http://localhost:32943"
    - contracts
    - "-n"
    - dev
    - "-c"
    - "./alephium.config.yaml"
    - compile
    - tests/contracts/test_dir/sub_contract.ral
---
success: true
exit_code: 0
----- stdout -----
{
  "contracts": [
    {
      "bytecode": "01011e01000202010dd321939f9e05160016015fa00016002a16012ba100a00002",
      "bytecodeDebugPatch": "",
      "codeHash": "3461ebfaca02ad0a3f587a5b67a461c0cbd82d14261407b1d9277ed4ad129234",
      "codeHashDebug": "3461ebfaca02ad0a3f587a5b67a461c0cbd82d14261407b1d9277ed4ad129234",
      "constants": [],
      "enums": [],
      "events": [
        {
          "fieldNames": [
            "x",
            "y"
          ],
          "fieldTypes": [
            "U256",
            "U256"
          ],
          "name": "Sub"
        }
      ],
      "fields": {
        "isMutable": [
          true
        ],
        "names": [
          "result"
        ],
        "types": [
          "U256"
        ]
      },
      "functions": [
        {
          "isPublic": true,
          "name": "sub",
          "paramIsMutable": [
            false
          ],
          "paramNames": [
            "array"
          ],
          "paramTypes": [
            "[U256;2]"
          ],
          "returnTypes": [
            "U256"
          ],
          "useAssetsInContract": false,
          "usePreapprovedAssets": false
        }
      ],
      "name": "SubO",
      "version": "v4.2.5",
      "warnings": []
    },
    {
      "bytecode": "01011e01000202010dd321939f9e05160016015fa00016002a16012ba100a00002",
      "bytecodeDebugPatch": "",
      "codeHash": "3461ebfaca02ad0a3f587a5b67a461c0cbd82d14261407b1d9277ed4ad129234",
      "codeHashDebug": "3461ebfaca02ad0a3f587a5b67a461c0cbd82d14261407b1d9277ed4ad129234",
      "constants": [],
      "enums": [],
      "events": [
        {
          "fieldNames": [
            "x",
            "y"
          ],
          "fieldTypes": [
            "U256",
            "U256"
          ],
          "name": "Sub"
        }
      ],
      "fields": {
        "isMutable": [
          true
        ],
        "names": [
          "result"
        ],
        "types": [
          "U256"
        ]
      },
      "functions": [
        {
          "isPublic": true,
          "name": "sub",
          "paramIsMutable": [
            false
          ],
          "paramNames": [
            "array"
          ],
          "paramTypes": [
            "[U256;2]"
          ],
          "returnTypes": [
            "U256"
          ],
          "useAssetsInContract": false,
          "usePreapprovedAssets": false
        }
      ],
      "name": "Sub",
      "version": "v4.2.5",
      "warnings": []
    }
  ],
  "scripts": []
}

----- stderr -----
