tests/snapshots/contracts/compile_invalid_file.snap
---
source: tests/utils.rs
assertion_line: 45
info:
  program: kermit
  args:
    - contracts
    - "-n"
    - dev
    - compile
    - tests/contracts/impossible.ral
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: No valid source information found in the provided files.
