tests/snapshots/contracts/compile_invalid_import.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - contracts
    - "-n"
    - dev
    - "-c"
    - "./alephium.config.yaml"
    - compile
    - tests/contracts/fail/wrong_import.ral
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: File does not exist at path: tests/contracts/fail/inexistant.ral
